# solar-energy-assistant

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.mcp  README.md  docker-compose.yml  main.py  pipeline.py  pyproject.toml
api/: README.md  main.py  pipeline.py
api/ingestion/: canonicalizer.py
api/models/: prediction.py  time_resolution.py  user.py
api/responses/: __init__.py  (+4 more)
core/: settings.py
frontend/: index.html  package-lock.json  package.json
ingestion/: canonicalizer.py  csv_data_reader.py  csv_header_detector.py  hourly_resampler.py  time_resolution_detector.py
mcp/: server.py
model_artifacts/: monthly-debug.onnx  xgboost_model.onnx
models/: __init__.py  column_mapping.py  model_features.py  prediction.py  prediction_input.py  prediction_output.py  recommendation.py
output/: canonical-test.parquet
repositories/: __init__.py  cache_repository.py  geocoding_repository.py  metadata_repository.py  model_repository.py  model_training_repository.py  parquet_repository.py  prediction_repository.py  weather_repository.py
responses/: data_upload_result.py  model_metric_result.py  model_training_result.py  prediction_result.py  user_result.py
routers/: __init__.py  data_uploads.py  model_training.py  predictions.py  recommendations.py  users.py
services/: cache_service.py  csv_preprocessing_service.py  data_upload_service.py  dependencies.py  evaluation_service.py  geocoding_service.py  metadata_service.py  model_training_service.py  prediction_service.py  recommendation_service.py  user_service.py  weather_service.py
(+39 files in other folders)
