[project]
name = "solar-energy-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.25.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "pydantic-settings>=2.14.0",
    "scikit-learn>=1.8.0",
]
