[project]
name = "solar-energy-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.25.1",
    "fastapi[standard]>=0.110.0",
    "uvicorn>=0.29.0",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "pydantic-settings>=2.14.0",
    "scikit-learn>=1.8.0",
    "fastmcp>=3.2.4",
    "onnxmltools>=1.16.0",
    "onnxconverter-common>=1.16.0",
    "optuna>=4.6.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "trio>=0.33.0",
    "xgboost>=3.2.0",
    "psycopg[binary]>=3.2.0",
]
